# pane-rs

./: .gitignore  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml  uv.toml
example/window/: Cargo.toml  build.rs
example/window/src/: main.rs
examples/window/: build.rs
examples/window/src/: main.rs
pane/: Cargo.toml  build.rs
pane/src/: lib.rs
src/: lib.rs  main.rs
tools/: Cargo.toml
