[package]
name = "pane-rs"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies.windows]
version = "0.62.2"
features = [
  "UI_ViewManagement",
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_System_WinRT",
  "Win32_UI_Controls",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_TextServices",
  "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
embed-resource = "3.0.6"
