[package]
name = "pane_example_window"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
pane = { path = "../../pane" }
serde = { workspace = true }
serde_json = { workspace = true }
windows = { workspace = true }

[build-dependencies]
pane = { path = "../../pane" }
windows = { workspace = true }
